--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -16,10 +16,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           level: warning
-          golangci_lint_flags: "--config=.golangci.yaml"
           filter_mode: diff_context
           reporter: github-pr-review
-          fail_on_error: true
+          fail_level: 'error'
 
   staticcheck:
     runs-on: ubuntu-latest
@@ -30,7 +29,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           filter_mode: diff_context
-          fail_on_error: true
+          fail_level: 'error'
 
   actionlint:
     runs-on: ubuntu-latest
@@ -40,7 +39,7 @@ jobs:
         with:
           reporter: github-pr-review
           filter_mode: diff_context
-          fail_on_error: true
+          fail_level: 'error'
 
   misspell:
     runs-on: ubuntu-latest
@@ -51,4 +50,4 @@ jobs:
           reporter: github-pr-review
           level: warning
           filter_mode: diff_context
-          fail_on_error: true
+          fail_level: 'error'
