--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -15,7 +15,7 @@ updates:
       time: "20:00"
     open-pull-requests-limit: 5
     reviewers:
-      - "mashiike"
+      - "mmichaelb"
     ignore:
       - dependency-name: "aws*"
         update-types: ["version-update:semver-patch"]
